Pass AVNIR regression #9
Also reset the request to take "variable=['all']"

DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -564,9 +564,7 @@
     "\n",
     "This test combines a bounding box spatial subset with a temporal range subset. All variables are explicitly specified. No granules are specified in this request, meaning the results will be determined by those granules that match the spatial and temporal criteria.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 4 variables, with 4 colour bands, so would perhaps expect 16 output bands, rather than 4.\n",
-    "\n",
-    "**Note: This request used to specify all variables using \"all\".**"
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are requesting \"all\" variables and expecting to retrieve all 4 output bands.\n"
    ]
   },
   {
@@ -580,36 +578,25 @@
     "    avnir_directory_nine = 'avnir_test_nine'\n",
     "    \n",
     "    avnir_request_nine = Request(collection=environment_information['avnir_collection'],\n",
-    "                                 variables=['Band1', 'Band2', 'Band3', 'Band4'],\n",
+    "                                 variables=['all'],\n",
     "                                 spatial=BBox(18.4, -26.1, 18.6, -26.0),\n",
     "                                 format='image/tiff')\n",
     "\n",
     "    avnir_output_nine = make_request_and_download_result(harmony_client, avnir_request_nine,\n",
     "                                                         avnir_directory_nine)\n",
     "\n",
-    "    avnir_variable_base_nine = 'ALAV2A151894120-OORIRFU_subsetted'\n",
-    "    avnir_variables_nine = {f'{avnir_variable_base_nine}__Band1__colored_band_1',\n",
-    "                            f'{avnir_variable_base_nine}__Band1__colored_band_2',\n",
-    "                            f'{avnir_variable_base_nine}__Band1__colored_band_3',\n",
-    "                            f'{avnir_variable_base_nine}__Band1__colored_band_4',\n",
-    "                            f'{avnir_variable_base_nine}__Band2__colored_band_1',\n",
-    "                            f'{avnir_variable_base_nine}__Band2__colored_band_2',\n",
-    "                            f'{avnir_variable_base_nine}__Band2__colored_band_3',\n",
-    "                            f'{avnir_variable_base_nine}__Band2__colored_band_4',\n",
-    "                            f'{avnir_variable_base_nine}__Band3__colored_band_1',\n",
-    "                            f'{avnir_variable_base_nine}__Band3__colored_band_2',\n",
-    "                            f'{avnir_variable_base_nine}__Band3__colored_band_3',\n",
-    "                            f'{avnir_variable_base_nine}__Band3__colored_band_4',\n",
-    "                            f'{avnir_variable_base_nine}__Band4__colored_band_1',\n",
-    "                            f'{avnir_variable_base_nine}__Band4__colored_band_2',\n",
-    "                            f'{avnir_variable_base_nine}__Band4__colored_band_3',\n",
-    "                            f'{avnir_variable_base_nine}__Band4__colored_band_4'}\n",
+    "    avnir_variable_base_nine = 'ALAV2A151894120-OORIRFU'\n",
+    "\n",
+    "    avnir_variables_nine = {f'IMG-01-{avnir_variable_base_nine}_000_band_1',\n",
+    "                            f'IMG-02-{avnir_variable_base_nine}_000_band_1',\n",
+    "                            f'IMG-03-{avnir_variable_base_nine}_000_band_1',\n",
+    "                            f'IMG-04-{avnir_variable_base_nine}_000_band_1'}\n",
     "\n",
     "    expected_avnir_results_nine = {'authority': 'EPSG',\n",
     "                                   'cs': 'Projected',\n",
     "                                   'gcs': 'WGS 84',\n",
     "                                   'gcs_epsg': '4326',\n",
-    "                                   'n_bands': 16,\n",
+    "                                   'n_bands': 4,\n",
     "                                   'proj_cs':'WGS 84 / UTM zone 34S',\n",
     "                                   'proj_epsg': '32734',\n",
     "                                   'spatial_extent': [-26.13, -25.96, 18.41, 18.59],\n",
