Update wording on AVNIR Test #10
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -619,7 +619,7 @@
     "\n",
     "This test combines a bounding box spatial subset, across the Equator, with a variable subset for a single variable. The output should be in a `.png` format.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 1 variable, with 4 colour bands, for a total of 4 bands.\n",
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. \n",
     "\n",
     "For a `.png` output, the authority and projection can't be derived from the output file, so several of the tested properties are `None` for this test case."
    ]
