Fix print statement.
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -372,7 +372,7 @@
     "    check_request_output(avnir_output_five[0], expected_avnir_results_five)\n",
     "    clean_test_artefacts(avnir_directory_five)\n",
     "else:\n",
-    "    print('skipping test: hga regression tests not configured for this environment.')\n",
+    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
     "    "
    ]
   },
