Still finding stray """ strings
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -371,8 +371,7 @@
     "    check_request_output(avnir_output_five[0], expected_avnir_results_five)\n",
     "    clean_test_artefacts(avnir_directory_five)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
-    "    "
+    "    print('Skipping test: HGA regression tests not configured for this environment.')   "
    ]
   },
   {
@@ -549,8 +548,7 @@
     "    check_request_output(avnir_output_eight[0], expected_avnir_results_eight)\n",
     "    clean_test_artefacts(avnir_directory_eight)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
-    "\"\"\""
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
    ]
   },
   {
