Pass AVNIR regression #11
Update with reference image

DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -669,17 +669,9 @@
    "metadata": {},
    "source": [
     "### AVNIR test case 11:\n",
-    "\n",
     "This test combines a bounding box spatial subset, across the Equator, with a variable subset for a single variable. The output should be in a `.gif` format.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 1 variable, with 4 colour bands, for a total of 4 bands.\n",
-    "\n",
-    "# TO FIX: Request currently gets `gdal_translate` error:\n",
-    "\n",
-    "```\n",
-    "2022-04-06T21:48:31.943Z [debug]: INFO:root:gdal_translate '-of' 'GIF' '-scale' '/tmp/tmpilgb7xne/result.tif' '/tmp/tmpilgb7xne/translated.gif'\n",
-    "2022-04-06T21:48:32.008Z [debug]: ERROR 6: GIF driver only supports one band images.\n",
-    "```"
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. \n"
    ]
   },
   {
@@ -689,12 +681,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
     "if environment_information is not None:\n",
     "    granules = {Environment.PROD: 'G1813212660-ASF',\n",
     "                Environment.UAT: 'G1244144597-EEDTEST',\n",
     "                Environment.SIT: 'G1244144597-EEDTEST'}\n",
-    "\n",
     "    avnir_directory_eleven = 'avnir_test_eleven'\n",
     "    \n",
     "    avnir_request_eleven = Request(collection=environment_information['avnir_collection'],\n",
@@ -704,27 +694,25 @@
     "\n",
     "    avnir_output_eleven = make_request_and_download_result(harmony_client, avnir_request_eleven,\n",
     "                                                           avnir_directory_eleven)\n",
-    "\n",
-    "    avnir_variables_eleven = {'Band1', 'Band2', 'Band3', 'Band4'}\n",
-    "\n",
     "    expected_avnir_results_eleven = {'authority': None,\n",
     "                                     'cs': None,\n",
     "                                     'file_type': 'gif',\n",
     "                                     'gcs': None,\n",
     "                                     'gcs_epsg': None,\n",
-    "                                     'n_bands': 4,\n",
+    "                                     'n_bands': 1,\n",
     "                                     'proj_cs': None,\n",
     "                                     'proj_epsg': None,\n",
     "                                     'spatial_extent': None,\n",
-    "                                     'variables': avnir_variables_eleven,\n",
+    "                                     'variables': {},\n",
+    "                                     'reference_image': 'reference_images/avnir_reference_eleven.gif',\n",
     "                                     'width': 3410,\n",
     "                                     'height': 3238}\n",
-    "    \n",
+    "\n",
+    "    print(avnir_output_eleven)\n",
     "    check_request_output(avnir_output_eleven[0], expected_avnir_results_eleven)\n",
     "    clean_test_artefacts(avnir_directory_eleven)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
-    "\"\"\""
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
    ]
   },
   {
