Update UAVSAR Test 1
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1632,11 +1632,12 @@
     "\n",
     "The tests below will use the UAVSAR POLSAR Pauli collection (for UAT this is mirrored in the EEDTEST CMR environment).\n",
     "\n",
+    "The UAVSAR POLSAR data consists of 3 variables of data where each band represents a science variable (e.g., \"HH minus VV, Red Band\", \"HV,Green Band\" and \"HH plus VV, Blue Band\").\n",
+    "\n",
     "### UAVSAR test case 1:\n",
     "\n",
     "This test combines a bounding box spatial subset with a variable subset (`Band1`).\n",
-    "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 4 bands."
+    "\n"
    ]
   },
   {
@@ -1661,18 +1662,16 @@
     "    uavsar_output_one = make_request_and_download_result(harmony_client, uavsar_request_one,\n",
     "                                                         uavsar_directory_one)\n",
     "\n",
-    "    uavsar_variable_base_one = 'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band1_subsetted__Band1__colored_band'\n",
+    "    uavsar_variable_base_one = 'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band1_subsetted__Band1__subsetted_band'\n",
+    "    \n",
     "\n",
-    "    uavsar_variables_one = {f'{uavsar_variable_base_one}_1',\n",
-    "                            f'{uavsar_variable_base_one}_2',\n",
-    "                            f'{uavsar_variable_base_one}_3',\n",
-    "                            f'{uavsar_variable_base_one}_4'}\n",
+    "    uavsar_variables_one = {f'{uavsar_variable_base_one}_1'}\n",
     "\n",
     "    expected_uavsar_results_one = {'authority': 'EPSG',\n",
     "                                   'cs': 'Geographic',\n",
     "                                   'gcs': 'WGS 84',\n",
     "                                   'gcs_epsg': '4326',\n",
-    "                                   'n_bands': 4,\n",
+    "                                   'n_bands': 1,\n",
     "                                   'proj_cs': None,\n",
     "                                   'proj_epsg': None,\n",
     "                                   'reference_image': 'reference_images/uavsar_reference_one.tiff',\n",
