Update UAVSAR Test 2
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1693,9 +1693,7 @@
    "source": [
     "### UAVSAR test case 2:\n",
     "\n",
-    "This test combines a bounding box spatial subset with a variable subset (`Band2`).\n",
-    "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 4 bands."
+    "This test combines a bounding box spatial subset with a variable subset (`Band2`)."
    ]
   },
   {
@@ -1720,18 +1718,13 @@
     "    uavsar_output_two = make_request_and_download_result(harmony_client, uavsar_request_two,\n",
     "                                                         uavsar_directory_two)\n",
     "\n",
-    "    uavsar_variable_base_two = 'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band2_subsetted__Band2__colored_band'\n",
-    "\n",
-    "    uavsar_variables_two = {f'{uavsar_variable_base_two}_1',\n",
-    "                            f'{uavsar_variable_base_two}_2',\n",
-    "                            f'{uavsar_variable_base_two}_3',\n",
-    "                            f'{uavsar_variable_base_two}_4'}\n",
+    "    uavsar_variables_two = {'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band2_subsetted__Band2__subsetted_band_1'}\n",
     "\n",
     "    expected_uavsar_results_two = {'authority': 'EPSG',\n",
     "                                   'cs': 'Geographic',\n",
     "                                   'gcs': 'WGS 84',\n",
     "                                   'gcs_epsg': '4326',\n",
-    "                                   'n_bands': 4,\n",
+    "                                   'n_bands': 1,\n",
     "                                   'proj_cs': None,\n",
     "                                   'proj_epsg': None,\n",
     "                                   'reference_image': 'reference_images/uavsar_reference_two.tiff',\n",
