Update UAVSAR Test 3
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1748,7 +1748,7 @@
     "\n",
     "This test combines a bounding box spatial subset with a variable subset (`Band3`).\n",
     "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 4 bands."
+    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\")."
    ]
   },
   {
@@ -1773,18 +1773,13 @@
     "    uavsar_output_three = make_request_and_download_result(harmony_client, uavsar_request_three,\n",
     "                                                           uavsar_directory_three)\n",
     "\n",
-    "    uavsar_variable_base_three = 'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band3_subsetted__Band3__colored_band'\n",
-    "\n",
-    "    uavsar_variables_three = {f'{uavsar_variable_base_three}_1',\n",
-    "                              f'{uavsar_variable_base_three}_2',\n",
-    "                              f'{uavsar_variable_base_three}_3',\n",
-    "                              f'{uavsar_variable_base_three}_4'}\n",
+    "    uavsar_variables_three = {'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band3_subsetted__Band3__subsetted_band_1'}\n",
     "\n",
     "    expected_uavsar_results_three = {'authority': 'EPSG',\n",
     "                                     'cs': 'Geographic',\n",
     "                                     'gcs': 'WGS 84',\n",
     "                                     'gcs_epsg': '4326',\n",
-    "                                     'n_bands': 4,\n",
+    "                                     'n_bands': 1,\n",
     "                                     'proj_cs': None,\n",
     "                                     'proj_epsg': None,\n",
     "                                     'reference_image': 'reference_images/uavsar_reference_three.tiff',\n",
