Update UAVSAR Test 4
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1803,7 +1803,7 @@
     "\n",
     "This test combines a bounding box spatial subset with a variable subset for multiple variables (`Band1` and `Band2`).\n",
     "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 8 bands (4 each for `Band1` and `Band2`)."
+    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") this test requests 2 bands. "
    ]
   },
   {
@@ -1828,23 +1828,14 @@
     "    uavsar_output_four = make_request_and_download_result(harmony_client, uavsar_request_four,\n",
     "                                                          uavsar_directory_four)\n",
     "\n",
-    "    uavsar_band1_base_four = 'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__Band1__colored_band'\n",
-    "    uavsar_band2_base_four = 'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__Band2__colored_band'\n",
-    "\n",
-    "    uavsar_variables_four = {f'{uavsar_band1_base_four}_1',\n",
-    "                             f'{uavsar_band1_base_four}_2',\n",
-    "                             f'{uavsar_band1_base_four}_3',\n",
-    "                             f'{uavsar_band1_base_four}_4',\n",
-    "                             f'{uavsar_band2_base_four}_1',\n",
-    "                             f'{uavsar_band2_base_four}_2',\n",
-    "                             f'{uavsar_band2_base_four}_3',\n",
-    "                             f'{uavsar_band2_base_four}_4'}\n",
+    "    uavsar_variables_four = {'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__Band1__subsetted_band_1',\n",
+    "                             'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__Band2__subsetted_band_1'}\n",
     "\n",
     "    expected_uavsar_results_four = {'authority': 'EPSG',\n",
     "                                    'cs': 'Geographic',\n",
     "                                    'gcs': 'WGS 84',\n",
     "                                    'gcs_epsg': '4326',\n",
-    "                                    'n_bands': 8,\n",
+    "                                    'n_bands': 2,\n",
     "                                    'proj_cs': None,\n",
     "                                    'proj_epsg': None,\n",
     "                                    'reference_image': 'reference_images/uavsar_reference_four.tiff',\n",
