Update UAVSAR Test 5
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1859,11 +1859,7 @@
     "\n",
     "This test performs a bounding box spatial subset, while requesting all variables.\n",
     "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 12 bands (4 each for `Band1`, `Band2` and `Band3`).\n",
-    "\n",
-    "# TO INVESTIGATE: Only produces a single output file with 4 bands (with name including \"all\")\n",
-    "\n",
-    "**Comparing the output to a request the explicitly requests all variables as a comma-separated list, the output from an \"all\" request is just the colour bands from the first variable.**"
+    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \\\"HH - VV\\\"), so the output is expected to have a total of 3 bands (1 each for `Band1`, `Band2` and `Band3`)."
    ]
   },
   {
@@ -1873,7 +1869,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
     "if environment_information is not None:\n",
     "    granules = {Environment.PROD: 'G1366089385-ASF',\n",
     "                Environment.UAT: 'G1244144737-EEDTEST',\n",
@@ -1889,31 +1884,18 @@
     "    uavsar_output_five = make_request_and_download_result(harmony_client, uavsar_request_five,\n",
     "                                                          uavsar_directory_five)\n",
     "\n",
-    "    uavsar_band1_base_five = 'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__Band1__colored_band'\n",
-    "    uavsar_band2_base_five = 'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__Band2__colored_band'\n",
-    "    uavsar_band3_base_five = 'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__Band3__colored_band'\n",
-    "\n",
-    "    uavsar_variables_five = {f'{uavsar_band1_base_five}_1',\n",
-    "                             f'{uavsar_band1_base_five}_2',\n",
-    "                             f'{uavsar_band1_base_five}_3',\n",
-    "                             f'{uavsar_band1_base_five}_4',\n",
-    "                             f'{uavsar_band2_base_five}_1',\n",
-    "                             f'{uavsar_band2_base_five}_2',\n",
-    "                             f'{uavsar_band2_base_five}_3',\n",
-    "                             f'{uavsar_band2_base_five}_4',\n",
-    "                             f'{uavsar_band3_base_five}_1',\n",
-    "                             f'{uavsar_band3_base_five}_2',\n",
-    "                             f'{uavsar_band3_base_five}_3',\n",
-    "                             f'{uavsar_band3_base_five}_4'}\n",
+    "    uavsar_variables_five = {'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__all__subsetted_band_1',\n",
+    "                             'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__all__subsetted_band_2', \n",
+    "                             'eelriv_06508_16103_002_161206_L090_CX_02_pauli_subsetted__all__subsetted_band_3',}\n",
     "\n",
     "    expected_uavsar_results_five = {'authority': 'EPSG',\n",
     "                                    'cs': 'Geographic',\n",
     "                                    'gcs': 'WGS 84',\n",
     "                                    'gcs_epsg': '4326',\n",
-    "                                    'n_bands': 12,\n",
+    "                                    'n_bands': 3,\n",
     "                                    'proj_cs': None,\n",
     "                                    'proj_epsg': None,\n",
-    "                                    # 'reference_image': 'reference_images/uavsar_reference_five.tiff',\n",
+    "                                    'reference_image': 'reference_images/uavsar_reference_five.tiff',\n",
     "                                    'spatial_extent': [39.95, 40.0, -123.69, -123.59],\n",
     "                                    'variables': uavsar_variables_five,\n",
     "                                    'width': 1800, \n",
@@ -1922,8 +1904,7 @@
     "    check_request_output(uavsar_output_five[0], expected_uavsar_results_five)\n",
     "    clean_test_artefacts(uavsar_directory_five)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
-    "\"\"\""
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
    ]
   },
   {
