Update UAVSAR Test 6
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1914,11 +1914,9 @@
    "source": [
     "### UAVSAR test case 6:\n",
     "\n",
-    "This test performs a bounding box spatial subset that crosses the Equator, while explicitly requesting all variables by name (`Band1`, `Band2` and `Band3`).\n",
+    "This test performs a bounding box spatial subset that crosses the Equator, while explicitly requesting all variables by identifier \"all\".\n",
     "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 12 bands (4 each for `Band1`, `Band2` and `Band3`).\n",
-    "\n",
-    "**Note, this test used to specify \"all\" for variables.**"
+    "Each band in the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") so the output is expected to have 3 bands (1 each for `Band1`, `Band2` and `Band3`)."
    ]
   },
   {
@@ -1936,7 +1934,7 @@
     "    uavsar_directory_six = 'uavsar_test_six'\n",
     "    \n",
     "    uavsar_request_six = Request(collection=environment_information['uavsar_collection'],\n",
-    "                                 variables=['Band1', 'Band2', 'Band3'],\n",
+    "                                 variables=['all'],\n",
     "                                 spatial=BBox(11.57, -0.03, 11.60, 0.02),\n",
     "                                 format='image/tiff',\n",
     "                                 granule_id=granules[environment_information['env']])\n",
@@ -1944,28 +1942,17 @@
     "    uavsar_output_six = make_request_and_download_result(harmony_client, uavsar_request_six,\n",
     "                                                         uavsar_directory_six)\n",
     "\n",
-    "    uavsar_band1_base_six = 'eighty_14047_16008_006_160225_L090_CX_01_pauli_subsetted__Band1__colored_band'\n",
-    "    uavsar_band2_base_six = 'eighty_14047_16008_006_160225_L090_CX_01_pauli_subsetted__Band2__colored_band'\n",
-    "    uavsar_band3_base_six = 'eighty_14047_16008_006_160225_L090_CX_01_pauli_subsetted__Band3__colored_band'\n",
+    "    uavsar_base_six = 'eighty_14047_16008_006_160225_L090_CX_01_pauli_subsetted__all__subsetted'\n",
     "\n",
-    "    uavsar_variables_six = {f'{uavsar_band1_base_six}_1',\n",
-    "                            f'{uavsar_band1_base_six}_2',\n",
-    "                            f'{uavsar_band1_base_six}_3',\n",
-    "                            f'{uavsar_band1_base_six}_4',\n",
-    "                            f'{uavsar_band2_base_six}_1',\n",
-    "                            f'{uavsar_band2_base_six}_2',\n",
-    "                            f'{uavsar_band2_base_six}_3',\n",
-    "                            f'{uavsar_band2_base_six}_4',\n",
-    "                            f'{uavsar_band3_base_six}_1',\n",
-    "                            f'{uavsar_band3_base_six}_2',\n",
-    "                            f'{uavsar_band3_base_six}_3',\n",
-    "                            f'{uavsar_band3_base_six}_4'}\n",
+    "    uavsar_variables_six = {f'{uavsar_base_six}_band_1',\n",
+    "                            f'{uavsar_base_six}_band_2',\n",
+    "                            f'{uavsar_base_six}_band_3'}\n",
     "\n",
     "    expected_uavsar_results_six = {'authority': 'EPSG',\n",
     "                                   'cs': 'Geographic',\n",
     "                                   'gcs': 'WGS 84',\n",
     "                                   'gcs_epsg': '4326',\n",
-    "                                   'n_bands': 12,\n",
+    "                                   'n_bands': 3,\n",
     "                                   'proj_cs': None,\n",
     "                                   'proj_epsg': None,\n",
     "                                   'reference_image': 'reference_images/uavsar_reference_six.tiff',\n",
