Update UAVSAR Test 7
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1974,11 +1974,7 @@
    "source": [
     "### UAVSAR test case 7:\n",
     "\n",
-    "This test performs a bounding box spatial subset in the Northern Hemisphere, explicitly requesting a bounding box that is larger than the input granule extent. To limit the size of the reference image stored in the repository, the request specifies a variable subset for only `Band1`, and the output dimensions are specified to be coarser resolution than the input granule.\n",
-    "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 4 bands.\n",
-    "\n",
-    "**Note, this test used to specify \"all\" for variables.**"
+    "This test performs a bounding box spatial subset in the Northern Hemisphere, explicitly requesting a bounding box that is larger than the input granule extent. To limit the size of the reference image stored in the repository, the request specifies a variable subset for only `Band1`, and the output dimensions are specified to be coarser resolution than the input granule.\n"
    ]
   },
   {
@@ -2003,19 +1999,13 @@
     "    uavsar_output_seven = make_request_and_download_result(harmony_client, uavsar_request_seven,\n",
     "                                                           uavsar_directory_seven)\n",
     "\n",
-    "    uavsar_band1_base_seven = ('kluane_01902_17064_005_170615_L090_CX_01_pauli_Band1_'\n",
-    "                               'regridded_subsetted__Band1__colored_band')\n",
-    "\n",
-    "    uavsar_variables_seven = {f'{uavsar_band1_base_seven}_1',\n",
-    "                              f'{uavsar_band1_base_seven}_2',\n",
-    "                              f'{uavsar_band1_base_seven}_3',\n",
-    "                              f'{uavsar_band1_base_seven}_4'}\n",
+    "    uavsar_variables_seven = {'kluane_01902_17064_005_170615_L090_CX_01_pauli_Band1_regridded_subsetted__Band1__resized_band_1'}\n",
     "\n",
     "    expected_uavsar_results_seven = {'authority': 'EPSG',\n",
     "                                     'cs': 'Geographic',\n",
     "                                     'gcs': 'WGS 84',\n",
     "                                     'gcs_epsg': '4326',\n",
-    "                                     'n_bands': 4,\n",
+    "                                     'n_bands': 1,\n",
     "                                     'proj_cs': None,\n",
     "                                     'proj_epsg': None,\n",
     "                                     'reference_image': 'reference_images/uavsar_reference_seven.tiff',\n",
