Update UAVSAR Test 8
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -2027,9 +2027,7 @@
    "source": [
     "### UAVSAR test case 8:\n",
     "\n",
-    "This test combines a bounding box spatial subset with a variable subset (`Band2`). The bounding box extends past the western bound of the input granule extent.\n",
-    "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 4 bands."
+    "This test combines a bounding box spatial subset with a variable subset (`Band2`). The bounding box extends past the western bound of the input granule extent.\n"
    ]
   },
   {
@@ -2054,19 +2052,13 @@
     "    uavsar_output_eight = make_request_and_download_result(harmony_client, uavsar_request_eight,\n",
     "                                                           uavsar_directory_eight)\n",
     "\n",
-    "    uavsar_variable_base_eight = ('ChiVol_00700_15030_010_150330_L090_CX_01_pauli_Band2_'\n",
-    "                                  'subsetted__Band2__colored_band')\n",
-    "\n",
-    "    uavsar_variables_eight = {f'{uavsar_variable_base_eight}_1',\n",
-    "                              f'{uavsar_variable_base_eight}_2',\n",
-    "                              f'{uavsar_variable_base_eight}_3',\n",
-    "                              f'{uavsar_variable_base_eight}_4'}\n",
+    "    uavsar_variables_eight = {'ChiVol_00700_15030_010_150330_L090_CX_01_pauli_Band2_subsetted__Band2__subsetted_band_1'}\n",
     "\n",
     "    expected_uavsar_results_eight = {'authority': 'EPSG',\n",
     "                                     'cs': 'Geographic',\n",
     "                                     'gcs': 'WGS 84',\n",
     "                                     'gcs_epsg': '4326',\n",
-    "                                     'n_bands': 4,\n",
+    "                                     'n_bands': 1,\n",
     "                                     'proj_cs': None,\n",
     "                                     'proj_epsg': None,\n",
     "                                     'reference_image': 'reference_images/uavsar_reference_eight.tiff',\n",
