Update UAVSAR Test 9
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -2080,11 +2080,7 @@
    "source": [
     "### UAVSAR test case 9:\n",
     "\n",
-    "This test combines a bounding box spatial subset with a temporal subset. All three variables are explicitly listed in the request. The temporal subset should return only a single granule, and apply the spatial and variable subset to that granule.\n",
-    "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 12 bands (4 each for `Band1`, `Band2` and `Band3`).\n",
-    "\n",
-    "**Note, this test used to specify \"all\" for variables.**"
+    "This test combines a bounding box spatial subset with a temporal subset. All three variables are explicitly listed in the request. The temporal subset should return only a single granule, and apply the spatial and variable subset to that granule."
    ]
   },
   {
@@ -2098,7 +2094,7 @@
     "    uavsar_directory_nine = 'uavsar_test_nine'\n",
     "    \n",
     "    uavsar_request_nine = Request(collection=environment_information['uavsar_collection'],\n",
-    "                                  variables=['Band1', 'Band2', 'Band3'],\n",
+    "                                  variables=['all'],\n",
     "                                  spatial=BBox(-89.02, 28.98, -89.00, 29.00),\n",
     "                                  temporal={'start': datetime(2016, 11, 17, 23, 27, 0),\n",
     "                                            'stop': datetime(2016, 11, 17, 23, 28, 0)},\n",
@@ -2107,28 +2103,15 @@
     "    uavsar_output_nine = make_request_and_download_result(harmony_client, uavsar_request_nine,\n",
     "                                                          uavsar_directory_nine)\n",
     "\n",
-    "    uavsar_band1_base_nine = 'gulfco_27086_16101_004_161117_L090_CX_01_pauli_subsetted__Band1__colored_band'\n",
-    "    uavsar_band2_base_nine = 'gulfco_27086_16101_004_161117_L090_CX_01_pauli_subsetted__Band2__colored_band'\n",
-    "    uavsar_band3_base_nine = 'gulfco_27086_16101_004_161117_L090_CX_01_pauli_subsetted__Band3__colored_band'\n",
-    "\n",
-    "    uavsar_variables_nine = {f'{uavsar_band1_base_nine}_1',\n",
-    "                             f'{uavsar_band1_base_nine}_2',\n",
-    "                             f'{uavsar_band1_base_nine}_3',\n",
-    "                             f'{uavsar_band1_base_nine}_4',\n",
-    "                             f'{uavsar_band2_base_nine}_1',\n",
-    "                             f'{uavsar_band2_base_nine}_2',\n",
-    "                             f'{uavsar_band2_base_nine}_3',\n",
-    "                             f'{uavsar_band2_base_nine}_4',\n",
-    "                             f'{uavsar_band3_base_nine}_1',\n",
-    "                             f'{uavsar_band3_base_nine}_2',\n",
-    "                             f'{uavsar_band3_base_nine}_3',\n",
-    "                             f'{uavsar_band3_base_nine}_4'}\n",
+    "    uavsar_variables_nine = {'gulfco_27086_16101_004_161117_L090_CX_01_pauli_subsetted__all__subsetted_band_1',\n",
+    "                             'gulfco_27086_16101_004_161117_L090_CX_01_pauli_subsetted__all__subsetted_band_2',\n",
+    "                             'gulfco_27086_16101_004_161117_L090_CX_01_pauli_subsetted__all__subsetted_band_3',}\n",
     "\n",
     "    expected_uavsar_results_nine = {'authority': 'EPSG',\n",
     "                                    'cs': 'Geographic',\n",
     "                                    'gcs': 'WGS 84',\n",
     "                                    'gcs_epsg': '4326',\n",
-    "                                    'n_bands': 12,\n",
+    "                                    'n_bands': 3,\n",
     "                                    'proj_cs': None,\n",
     "                                    'proj_epsg': None,\n",
     "                                    'reference_image': 'reference_images/uavsar_reference_nine.tiff',\n",
